# FlappyCodingChallenge

./: .gitignore  README.md  readme_kailinhuang.md
flappy_automation_code/: CMakeLists.txt
flappy_automation_code/include/flappy_automation_code/: flappy_automation_code.hpp  gap.hpp
flappy_automation_code/src/: flappy_automation_code.cpp
flappy_main_game/: CMakeLists.txt
flappy_main_game/scripts/: flappy.py
